[gd_scene load_steps=3 format=3 uid="uid://dl756gys3wbma"]

[ext_resource type="Script" path="res://UI/Closet/Closet.gd" id="1_fya4j"]
[ext_resource type="Texture2D" uid="uid://ckw7dq144ulxj" path="res://Images/ClosetStage0.png" id="2_l6des"]

[node name="Closet" type="Node2D"]
script = ExtResource("1_fya4j")

[node name="HungerTimer" type="Timer" parent="."]

[node name="ClosetImage" type="Sprite2D" parent="."]
texture = ExtResource("2_l6des")

[connection signal="timeout" from="HungerTimer" to="." method="_on_hunger_timer_timeout"]
